--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@react-aria/ssr": "3.9.9",
     "@react-aria/visually-hidden": "3.8.25",
     "clsx": "2.1.1",
+    "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
